--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
   deploy:
     needs: build
     name: Deploy to server
-    runs-on: self-hosted # use your self-hosted runner
+    runs-on: self-hosted
     steps:
       - name: echo
         run: /opt/wildfly/bin/jboss-cli.sh --connect --command="deploy --force /opt/actions-runner/_work/JakartaLabs3/JakartaLabs3/build/libs/JakartaLabs-3.war"
